--- a/Advana Builder EDL.ipynb
+++ b/Advana Builder EDL.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "### How to Use\n",
     "\n",
-    "1.  **Upload** your CSV or Excel file to the Advana [External Data Load (EDL)](https://edl.advana.data.mil/) site under the `Builder Data` location.\n",
+    "1.  **Upload** your CSV or Excel file to the Advana External Data Load (EDL) site under the `Builder Data` location.\n",
     "    * Only `.xlsx` (Excel) or `.csv` files are supported.\n",
     "\n",
     "2.  **Wait** until `COMPLETED` appears in the `Status` field on the Advana EDL site. This may take a while. You may need to refresh the page to see the status update.\n",
@@ -96,11 +96,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python interpreter will be restarted.\nLooking in indexes: http://mirror.vdms.uot.local/simple/, https://nexus.advana.data.mil/repository/pypi-all/simple/\nRequirement already satisfied: openpyxl in /local_disk0/.ephemeral_nfs/envs/pythonEnv-0b75534e-fb53-4662-bc0c-15643468ecf3/lib/python3.9/site-packages (3.1.5)\nRequirement already satisfied: et-xmlfile in /local_disk0/.ephemeral_nfs/envs/pythonEnv-0b75534e-fb53-4662-bc0c-15643468ecf3/lib/python3.9/site-packages (from openpyxl) (2.0.0)\nPython interpreter will be restarted.\n"
+      "Python interpreter will be restarted.\n",
+      "Looking in indexes: http://mirror.vdms.uot.local/simple/, https://nexus.advana.data.mil/repository/pypi-all/simple/\n",
+      "Requirement already satisfied: openpyxl in /local_disk0/.ephemeral_nfs/envs/pythonEnv-0b75534e-fb53-4662-bc0c-15643468ecf3/lib/python3.9/site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in /local_disk0/.ephemeral_nfs/envs/pythonEnv-0b75534e-fb53-4662-bc0c-15643468ecf3/lib/python3.9/site-packages (from openpyxl) (2.0.0)\n",
+      "Python interpreter will be restarted.\n"
      ]
     }
    ],
@@ -209,7 +212,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.databricks.v1+bamboolib_hint": "{\"pd.DataFrames\": [], \"version\": \"0.0.1\"}",
       "text/plain": []
@@ -423,25 +425,24 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": [
-       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n",
-       "\u001B[0;31mException\u001B[0m                                 Traceback (most recent call last)\n",
-       "\u001B[0;32m<command-3432481934381189>\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n",
-       "\u001B[1;32m      1\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdbutils\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwidgets\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Key (from Advana EDL)'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mstrip\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-       "\u001B[0;32m----> 2\u001B[0;31m \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;32mraise\u001B[0m \u001B[0mException\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Error: `Key (from Advana EDL)` must not be blank\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-       "\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdbutils\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwidgets\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Target Table Name'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-       "\u001B[1;32m      4\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;32mraise\u001B[0m \u001B[0mException\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Error: `Target Table Name` must not be blank\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-       "\u001B[1;32m      5\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mclean_names\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget_tablename\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mto_upper\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)\n",
+       "\u001b[0;32m<command-3432481934381189>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n",
+       "\u001b[1;32m      1\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdbutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Key (from Advana EDL)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: `Key (from Advana EDL)` must not be blank\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdbutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Target Table Name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: `Target Table Name` must not be blank\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[1;32m      5\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclean_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_tablename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto_upper\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\n",
-       "\u001B[0;31mException\u001B[0m: Error: `Key (from Advana EDL)` must not be blank"
+       "\u001b[0;31mException\u001b[0m: Error: `Key (from Advana EDL)` must not be blank"
       ]
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
        "arguments": {},
-       "data": "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m\n\u001B[0;31mException\u001B[0m                                 Traceback (most recent call last)\n\u001B[0;32m<command-3432481934381189>\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdbutils\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwidgets\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Key (from Advana EDL)'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mstrip\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;32mraise\u001B[0m \u001B[0mException\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Error: `Key (from Advana EDL)` must not be blank\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdbutils\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwidgets\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'Target Table Name'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;32mraise\u001B[0m \u001B[0mException\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Error: `Target Table Name` must not be blank\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mtarget_tablename\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mclean_names\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget_tablename\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mto_upper\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\n\u001B[0;31mException\u001B[0m: Error: `Key (from Advana EDL)` must not be blank",
+       "data": "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)\n\u001b[0;32m<command-3432481934381189>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdbutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Key (from Advana EDL)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: `Key (from Advana EDL)` must not be blank\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdbutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Target Table Name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error: `Target Table Name` must not be blank\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtarget_tablename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclean_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_tablename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto_upper\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\n\u001b[0;31mException\u001b[0m: Error: `Key (from Advana EDL)` must not be blank",
        "errorSummary": "<span class='ansi-red-fg'>Exception</span>: Error: `Key (from Advana EDL)` must not be blank",
        "errorTraceType": "ansi",
        "metadata": {},
@@ -485,11 +486,8 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       ""
-      ]
+      "text/plain": []
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
@@ -529,11 +527,8 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       ""
-      ]
+      "text/plain": []
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
@@ -570,11 +565,8 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       ""
-      ]
+      "text/plain": []
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
@@ -618,11 +610,8 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       ""
-      ]
+      "text/plain": []
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
@@ -660,11 +649,8 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       ""
-      ]
+      "text/plain": []
      },
      "metadata": {
       "application/vnd.databricks.v1+output": {
@@ -716,21 +702,21 @@
       "label": null,
       "name": "Key (from Advana EDL)",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "Key (from Advana EDL)",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "Overwrite or Append": {
@@ -742,29 +728,29 @@
       "label": null,
       "name": "Overwrite or Append",
       "options": {
-       "widgetDisplayType": "Dropdown",
        "choices": [
         "Overwrite",
         "Append"
        ],
        "fixedDomain": true,
-       "multiselect": false
+       "multiselect": false,
+       "widgetDisplayType": "Dropdown"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "dropdown",
       "defaultValue": "Append",
       "label": null,
       "name": "Overwrite or Append",
       "options": {
-       "widgetType": "dropdown",
        "autoCreated": null,
        "choices": [
         "Overwrite",
         "Append"
-       ]
-      }
+       ],
+       "widgetType": "dropdown"
+      },
+      "widgetType": "dropdown"
      }
     },
     "Region": {
@@ -776,27 +762,27 @@
       "label": null,
       "name": "Region",
       "options": {
-       "widgetDisplayType": "Dropdown",
        "choices": [
         "us-gov-west-1"
        ],
        "fixedDomain": true,
-       "multiselect": false
+       "multiselect": false,
+       "widgetDisplayType": "Dropdown"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "dropdown",
       "defaultValue": "us-gov-west-1",
       "label": null,
       "name": "Region",
       "options": {
-       "widgetType": "dropdown",
        "autoCreated": null,
        "choices": [
         "us-gov-west-1"
-       ]
-      }
+       ],
+       "widgetType": "dropdown"
+      },
+      "widgetType": "dropdown"
      }
     },
     "Skip Rows": {
@@ -808,21 +794,21 @@
       "label": null,
       "name": "Skip Rows",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "0",
       "label": null,
       "name": "Skip Rows",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "Target Schema": {
@@ -834,27 +820,27 @@
       "label": null,
       "name": "Target Schema",
       "options": {
-       "widgetDisplayType": "Dropdown",
        "choices": [
         "jup_fmc_restricted_workspace"
        ],
        "fixedDomain": true,
-       "multiselect": false
+       "multiselect": false,
+       "widgetDisplayType": "Dropdown"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "dropdown",
       "defaultValue": "jup_fmc_restricted_workspace",
       "label": null,
       "name": "Target Schema",
       "options": {
-       "widgetType": "dropdown",
        "autoCreated": null,
        "choices": [
         "jup_fmc_restricted_workspace"
-       ]
-      }
+       ],
+       "widgetType": "dropdown"
+      },
+      "widgetType": "dropdown"
      }
     },
     "Target Table Name": {
@@ -866,21 +852,21 @@
       "label": null,
       "name": "Target Table Name",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "",
       "label": null,
       "name": "Target Table Name",
       "options": {
-       "widgetType": "text",
        "autoCreated": null,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
