--- a/Advana Builder EDL.ipynb
+++ b/Advana Builder EDL.ipynb
@@ -70,6 +70,8 @@
     "    * Changes the name to all uppercase.\n",
     "    * Replaces spaces, slashes, and periods with underscores.\n",
     "    * Removes other invalid characters as defined by [Databricks](https://docs.databricks.com/aws/en/sql/language-manual/sql-ref-names).\n",
+    "* Excel files are processed in-memory while CSV files have a distributed processing.\n",
+    "    * Under normal use cases, there should not be an issue with processing excel files in-memory.  \n",
     "\n",
     "***\n",
     "\n",
@@ -180,7 +182,6 @@
     "    if not is_valid_extension(key):\n",
     "        raise Exception(f\"Invalid key: {key}.\\nKey must have a valid extension (.csv, .xls, or .xlsx.)\")\n",
     "    elif not is_correct_cluster(key):\n",
-    "        #TODO may want to allow non-sensitive data\n",
     "        raise Exception(f\"Invalid cluster: {key}.\\nData located on the incorrect cluster. Make sure you upload data to jup-fmc-r.\")\n",
     "\n",
     "    idx_path_start = key.find(\"builder\")\n",
